# ichigo-experiments

./: .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.md  app.py  app_asr.py  benchmark_endpoints.py  pyproject.toml  readme.md  requirements.txt  test.ipynb
api/: Dockerfile  asr.py  benchmark_endpoints.py  docker-compose.yml
docs/: pypi.md
ichigo/asr/: __init__.py  server.py  transcribe.py  transcriber.py  utils.py
ichigo/asr/arch/: quantizer.py  r2t.py  s2r.py
ichigo/asr/config/: merge-2560d.yaml
ichigo/asr/models/: factory.py  layers.py  vq_transformer.py
ichigo/llm/: __init__.py  ichigo.py  server.py  utils.py
src/ichigo/asr/demo/: app.py  inference.py  utils.py
src/ichigo/asr/models/: factory.py  vq_transformer.py
src/ichigo/asr/utils/: token_viz.ipynb
