[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ichigo"
version = "0.0.1"
authors = [
    { name = "Charles", email = "charles@jan.ai" },
]
description = "Ichigo is an open, ongoing research experiment to extend a text-based LLM to have native listening ability. Think of it as an open data, open weight, on device Siri."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["asr", "llm", "tts", "ichigo"]
dependencies = [
    "datasets==3.1.0",
    "huggingface_hub==0.26.2",
    "lightning==2.4.0",
    "openai_whisper==20240930",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "vector_quantize_pytorch==1.6.22",
    "webdataset==0.2.85",
    "wandb>=0.12.10",
    "librosa",
    "soundfile",
    "black",
    "evaluate",
    "transformers",
    "jiwer",
    "gradio",
    "matplotlib",
    "seaborn",
    "build",
    "twine",
    "fastapi",
]

[tool.setuptools]
package-dir = {"" = "ichigo"}
packages = [
    "asr",
    "llm",
    "tts",
]